Reduce redundancy to reduce file size, improve readability, add bugfixes, optimize performance, and improve interactability

--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 html, body {
+  background-color: #000;
   margin: 0;
   padding: 0;
 }
 canvas {
   display: block;
+  touch-action: manipulation;
 }
